[gd_scene load_steps=35 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scripts/dialog_handler.gd" type="Script" id=2]
[ext_resource path="res://scripts/dialog/reception_dialog.gd" type="Script" id=3]
[ext_resource path="res://scripts/dialog/oliver_kyungsoon_intro.gd" type="Script" id=4]
[ext_resource path="res://scripts/dialog/misc_objects.gd" type="Script" id=5]
[ext_resource path="res://scripts/dialog/oliver.gd" type="Script" id=6]
[ext_resource path="res://scripts/dialog/kyungsoon.gd" type="Script" id=7]
[ext_resource path="res://scripts/dialog/numa.gd" type="Script" id=8]
[ext_resource path="res://scripts/dialog/elijah.gd" type="Script" id=9]
[ext_resource path="res://scripts/dialog/sean.gd" type="Script" id=10]
[ext_resource path="res://scripts/dialog/flowers.gd" type="Script" id=11]
[ext_resource path="res://scripts/room_handler.gd" type="Script" id=12]
[ext_resource path="res://scripts/rooms/state_handler_template.gd" type="Script" id=13]
[ext_resource path="res://scripts/ui_handler.gd" type="Script" id=14]
[ext_resource path="res://assets/ui/text_box.png" type="Texture" id=15]
[ext_resource path="res://assets/fonts/Krub-MediumItalic.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://assets/fonts/Krub-ExtraLightItalic.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://assets/fonts/Krub-Medium.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://assets/fonts/Krub-ExtraLight.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://assets/ui/choice2.png" type="Texture" id=20]
[ext_resource path="res://assets/ui/ok_button.png" type="Texture" id=21]
[ext_resource path="res://assets/audio/Main_theme_320.ogg" type="AudioStream" id=22]

[sub_resource type="InputEventAction" id=1]
action = "ui_select"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 22
use_filter = true
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=4]
size = 22
use_filter = true
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=5]
size = 22
use_filter = true
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=6]
size = 22
use_filter = true
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=7]
size = 22
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 20 )
region_rect = Rect2( 0, 0, 552, 83 )
margin_left = 40.0
margin_right = 40.0
margin_top = 11.0
margin_bottom = 12.0

[sub_resource type="DynamicFont" id=10]
size = 28
font_data = ExtResource( 19 )

[sub_resource type="InputEventAction" id=11]
action = "ui_enter"

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[node name="game" type="Node2D"]
script = ExtResource( 1 )
default_room = "reception"

[node name="dialog_handler" type="Node" parent="."]
script = ExtResource( 2 )

[node name="reception_dialog" type="Node" parent="dialog_handler"]
script = ExtResource( 3 )

[node name="oliver_kyungsoon_intro" type="Node" parent="dialog_handler"]
script = ExtResource( 4 )

[node name="misc_objects" type="Node" parent="dialog_handler"]
script = ExtResource( 5 )

[node name="oliver" type="Node" parent="dialog_handler"]
script = ExtResource( 6 )

[node name="kyungsoon" type="Node" parent="dialog_handler"]
script = ExtResource( 7 )

[node name="numa" type="Node" parent="dialog_handler"]
script = ExtResource( 8 )

[node name="elijah" type="Node" parent="dialog_handler"]
script = ExtResource( 9 )

[node name="sean" type="Node" parent="dialog_handler"]
script = ExtResource( 10 )

[node name="flowers" type="Node" parent="dialog_handler"]
script = ExtResource( 11 )

[node name="room" type="Control" parent="."]
editor/display_folded = true
script = ExtResource( 12 )

[node name="room_container" type="Control" parent="room"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="room_mask" type="Control" parent="room"]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
script = ExtResource( 13 )

[node name="ui" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 14 )

[node name="sprites" type="Control" parent="ui"]

[node name="choices" type="Control" parent="ui"]
margin_left = 427.606
margin_top = 71.8214
margin_right = 882.606
margin_bottom = 463.822

[node name="text_box" type="Button" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 90.0
margin_top = 460.0
margin_right = -90.0
margin_bottom = -20.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
shortcut = SubResource( 2 )
flat = true

[node name="box" type="Sprite" parent="ui/text_box"]
position = Vector2( 20, 10 )
texture = ExtResource( 15 )
centered = false
offset = Vector2( -8.3689, -6.12292 )

[node name="speaker" type="RichTextLabel" parent="ui/text_box"]
margin_left = 50.5565
margin_top = 23.9275
margin_right = 316.556
margin_bottom = 54.9275
mouse_filter = 1
custom_fonts/bold_italics_font = SubResource( 3 )
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "oliver"
text = "oliver"
scroll_active = false

[node name="text" type="RichTextLabel" parent="ui/text_box"]
margin_left = 49.4013
margin_top = 74.8088
margin_right = 1049.4
margin_bottom = 198.809
mouse_filter = 1
custom_fonts/bold_italics_font = SubResource( 3 )
custom_fonts/italics_font = SubResource( 7 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "to be, or not to be: that is the question: whether 'tis nobler in the mind to suffer the slings and arrows of outrageous fortune, or to take arms against a sea of troubles, and by opposing end them?"
text = "to be, or not to be: that is the question: whether 'tis nobler in the mind to suffer the slings and arrows of outrageous fortune, or to take arms against a sea of troubles, and by opposing end them?"
scroll_active = false

[node name="name_input" type="Control" parent="ui"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = 199.0
margin_right = -300.0
margin_bottom = -436.0

[node name="mask" type="Control" parent="ui/name_input"]
margin_left = -334.037
margin_top = -220.465
margin_right = -294.037
margin_bottom = -180.465
rect_scale = Vector2( 33.8985, 19.0842 )

[node name="text" type="LineEdit" parent="ui/name_input"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 2.0
margin_right = -91.0
margin_bottom = 2.0
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/selection_color = Color( 0, 0, 0, 0.129412 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_length = 40
context_menu_enabled = false
caret_blink = true

[node name="ok_button" type="Button" parent="ui/name_input"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -107.682
margin_right = 0.318359
margin_bottom = 4.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
shortcut = SubResource( 12 )
icon = ExtResource( 21 )
flat = true

[node name="main_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[connection signal="pressed" from="ui/text_box" to="." method="update_dialog" binds= [ -1 ]]
[connection signal="pressed" from="ui/name_input/ok_button" to="." method="update_dialog" binds= [ -1 ]]
[connection signal="pressed" from="ui/name_input/ok_button" to="." method="set_player_name"]
[connection signal="pressed" from="ui/name_input/ok_button" to="ui/name_input" method="hide"]
